tests/baselines/reference/typedArraysCrossAssignability01.errors.txt
typedArraysCrossAssignability01.ts(13,5): error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8Array"' is not assignable to type '"Int8Array"'.
typedArraysCrossAssignability01.ts(14,5): error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Int8Array"'.
typedArraysCrossAssignability01.ts(15,5): error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Int8Array"'.
typedArraysCrossAssignability01.ts(16,5): error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Int8Array"'.
typedArraysCrossAssignability01.ts(17,5): error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Int8Array"'.
typedArraysCrossAssignability01.ts(18,5): error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Int8Array"'.
typedArraysCrossAssignability01.ts(19,5): error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Int8Array"'.
typedArraysCrossAssignability01.ts(20,5): error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Int8Array"'.
typedArraysCrossAssignability01.ts(22,5): error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Uint8Array"'.
typedArraysCrossAssignability01.ts(24,5): error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Uint8Array"'.
typedArraysCrossAssignability01.ts(25,5): error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Uint8Array"'.
typedArraysCrossAssignability01.ts(26,5): error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Uint8Array"'.
typedArraysCrossAssignability01.ts(27,5): error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Uint8Array"'.
typedArraysCrossAssignability01.ts(28,5): error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Uint8Array"'.
typedArraysCrossAssignability01.ts(29,5): error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Uint8Array"'.
typedArraysCrossAssignability01.ts(30,5): error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Uint8Array"'.
typedArraysCrossAssignability01.ts(32,5): error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Int16Array"'.
typedArraysCrossAssignability01.ts(33,5): error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8Array"' is not assignable to type '"Int16Array"'.
typedArraysCrossAssignability01.ts(35,5): error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Int16Array"'.
typedArraysCrossAssignability01.ts(36,5): error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Int16Array"'.
typedArraysCrossAssignability01.ts(37,5): error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Int16Array"'.
typedArraysCrossAssignability01.ts(38,5): error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Int16Array"'.
typedArraysCrossAssignability01.ts(39,5): error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Int16Array"'.
typedArraysCrossAssignability01.ts(40,5): error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Int16Array"'.
typedArraysCrossAssignability01.ts(42,5): error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Uint16Array"'.
typedArraysCrossAssignability01.ts(43,5): error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8Array"' is not assignable to type '"Uint16Array"'.
typedArraysCrossAssignability01.ts(44,5): error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Uint16Array"'.
typedArraysCrossAssignability01.ts(46,5): error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Uint16Array"'.
typedArraysCrossAssignability01.ts(47,5): error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Uint16Array"'.
typedArraysCrossAssignability01.ts(48,5): error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Uint16Array"'.
typedArraysCrossAssignability01.ts(49,5): error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Uint16Array"'.
typedArraysCrossAssignability01.ts(50,5): error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Uint16Array"'.
typedArraysCrossAssignability01.ts(52,5): error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Int32Array"'.
typedArraysCrossAssignability01.ts(53,5): error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8Array"' is not assignable to type '"Int32Array"'.
typedArraysCrossAssignability01.ts(54,5): error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Int32Array"'.
typedArraysCrossAssignability01.ts(55,5): error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Int32Array"'.
typedArraysCrossAssignability01.ts(57,5): error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Int32Array"'.
typedArraysCrossAssignability01.ts(58,5): error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Int32Array"'.
typedArraysCrossAssignability01.ts(59,5): error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Int32Array"'.
typedArraysCrossAssignability01.ts(60,5): error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Int32Array"'.
typedArraysCrossAssignability01.ts(62,5): error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Float32Array"'.
typedArraysCrossAssignability01.ts(63,5): error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8Array"' is not assignable to type '"Float32Array"'.
typedArraysCrossAssignability01.ts(64,5): error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Float32Array"'.
typedArraysCrossAssignability01.ts(65,5): error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Float32Array"'.
typedArraysCrossAssignability01.ts(66,5): error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Float32Array"'.
typedArraysCrossAssignability01.ts(67,5): error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Float32Array"'.
typedArraysCrossAssignability01.ts(69,5): error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Float32Array"'.
typedArraysCrossAssignability01.ts(70,5): error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Float32Array"'.
typedArraysCrossAssignability01.ts(72,5): error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Float64Array"'.
typedArraysCrossAssignability01.ts(73,5): error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8Array"' is not assignable to type '"Float64Array"'.
typedArraysCrossAssignability01.ts(74,5): error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Float64Array"'.
typedArraysCrossAssignability01.ts(75,5): error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Float64Array"'.
typedArraysCrossAssignability01.ts(76,5): error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Float64Array"'.
typedArraysCrossAssignability01.ts(77,5): error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Float64Array"'.
typedArraysCrossAssignability01.ts(78,5): error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Float64Array"'.
typedArraysCrossAssignability01.ts(80,5): error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Float64Array"'.
typedArraysCrossAssignability01.ts(82,5): error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Uint8ClampedArray"'.
typedArraysCrossAssignability01.ts(83,5): error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8Array"' is not assignable to type '"Uint8ClampedArray"'.
typedArraysCrossAssignability01.ts(84,5): error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Uint8ClampedArray"'.
typedArraysCrossAssignability01.ts(85,5): error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Uint8ClampedArray"'.
typedArraysCrossAssignability01.ts(86,5): error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Uint8ClampedArray"'.
typedArraysCrossAssignability01.ts(87,5): error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Uint8ClampedArray"'.
typedArraysCrossAssignability01.ts(88,5): error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Uint8ClampedArray"'.
typedArraysCrossAssignability01.ts(89,5): error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Uint8ClampedArray"'.


==== typedArraysCrossAssignability01.ts (64 errors) ====
    function CheckAssignability() {
        let arr_Int8Array           = new Int8Array(1);
        let arr_Uint8Array          = new Uint8Array(1);
        let arr_Int16Array          = new Int16Array(1);
        let arr_Uint16Array         = new Uint16Array(1);
        let arr_Int32Array          = new Int32Array(1);
        let arr_Uint32Array         = new Uint32Array(1);
        let arr_Float32Array        = new Float32Array(1);
        let arr_Float64Array        = new Float64Array(1);
        let arr_Uint8ClampedArray   = new Uint8ClampedArray(1);
    
        arr_Int8Array = arr_Int8Array;
        arr_Int8Array = arr_Uint8Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Int16Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Uint16Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Int32Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Uint32Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Float32Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Float64Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Int8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Int8Array"'.
    
        arr_Uint8Array = arr_Int8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Uint8Array"'.
        arr_Uint8Array = arr_Uint8Array;
        arr_Uint8Array = arr_Int16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Uint8Array"'.
        arr_Uint8Array = arr_Uint16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Uint8Array"'.
        arr_Uint8Array = arr_Int32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Uint8Array"'.
        arr_Uint8Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Uint8Array"'.
        arr_Uint8Array = arr_Float32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Uint8Array"'.
        arr_Uint8Array = arr_Float64Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Uint8Array"'.
        arr_Uint8Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Uint8Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Uint8Array"'.
    
        arr_Int16Array = arr_Int8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Uint8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Int16Array;
        arr_Int16Array = arr_Uint16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Int32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Float32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Float64Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Int16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Int16Array"'.
    
        arr_Uint16Array = arr_Int8Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Uint8Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Int16Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Uint16Array;
        arr_Uint16Array = arr_Int32Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Float32Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Float64Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Uint16Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Uint16Array"'.
    
        arr_Int32Array = arr_Int8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Uint8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Int16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Uint16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Int32Array;
        arr_Int32Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Float32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Float64Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Int32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Int32Array"'.
    
        arr_Float32Array = arr_Int8Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Uint8Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Int16Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Uint16Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Int32Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Float32Array;
        arr_Float32Array = arr_Float64Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Float32Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Float32Array"'.
    
        arr_Float64Array = arr_Int8Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Uint8Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Int16Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Uint16Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Int32Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Float32Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Float64Array;
        arr_Float64Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray<ArrayBuffer>' is not assignable to type 'Float64Array<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Float64Array"'.
    
        arr_Uint8ClampedArray = arr_Int8Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Uint8Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Int16Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Uint16Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Int32Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Uint32Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Float32Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Float64Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array<ArrayBuffer>' is not assignable to type 'Uint8ClampedArray<ArrayBuffer>'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Uint8ClampedArray;
        
    }
    